fix overflow; slider nav overhang

--- a/src/css/landing.less
+++ b/src/css/landing.less
@@ -100,7 +100,8 @@
 
 #story-list nav a{
   text-decoration: none;
-  padding:0 20px;
+  margin:0 20px;
+  padding-bottom:5px;
   color:#999999;
 }
 
