--- a/src/css/slider.less
+++ b/src/css/slider.less
@@ -1,3 +1,11 @@
+body{
+  overflow-x: hidden;
+}
+
+#story-list{
+  overflow-x: hidden;
+}
+
 #slider{
   display: flex;
   flex-wrap: nowrap;
